CPL/Tema3/tema3-tests/attributes2.lcpl.err
llc: attributes2.lcpl.ir:275:1: error: expected instruction opcode
L1:
^
clang: error: no such file or directory: 'attributes2.lcpl.ir.s'
./eval.sh: line 27: ./attributes2: No such file or directory
rm: cannot remove `attributes2': No such file or directory
